syntax = "proto3";

// Package store provides protobufs for storing types in the argon2 package.
package controller.storage.auth.userpass.argon2.store.v1;
option go_package = "github.com/hashicorp/watchtower/internal/auth/userpass/internal/argon2/store;store";

import "controller/storage/timestamp/v1/timestamp.proto";

message Configuration {
  // @inject_tag: gorm:"primary_key"
  uint32 id = 1;

  // The create_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp create_time = 2;

  // The iam_scope_id of the owning scope and must be set.
  // @inject_tag: gorm:"not_null"
  string iam_scope_id = 3;

  // @inject_tag: gorm:"not_null"
  uint32 iterations = 4;

  // @inject_tag: gorm:"not_null"
  uint32 memory = 5;

  // @inject_tag: gorm:"not_null"
  uint32 threads = 6;

  // @inject_tag: gorm:"not_null"
  uint32 salt_length = 7;

  // @inject_tag: gorm:"not_null"
  uint32 key_length = 8;
}

message PasswordEntry {
  // @inject_tag: gorm:"primary_key"
  string auth_method_id = 1;

  // The create_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp create_time = 2;

  // The update_time is set by the database.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp update_time = 3;

  // @inject_tag: gorm:"not_null"
  uint32 argon2_conf_id = 4;

  // The password_change_time is set by the application.
  // @inject_tag: `gorm:"default:current_timestamp"`
  timestamp.v1.Timestamp password_change_time = 5;

  // ct_salt is the encrypted salt which is stored in the database.
  // @inject_tag: gorm:"column:data;not_null" wrapping:"ct,entry_salt"
  bytes ct_salt = 6;

  // salt is the unencrypted salt which is not stored in the database.
  // @inject_tag: gorm:"-" wrapping:"pt,entry_salt"
  bytes salt = 7;

  // hashed_password is the derived key produced by the Argon2id key
  // derivation function.
  // @inject_tag: gorm:"not_null"
  bytes hashed_password = 8;
}
